# file-service

./: .gitignore  Cargo.toml  README.md  install.sh
config/: .gitignore  services-example.toml  services.toml
src/: logging.rs  main.rs  settings.rs
src/error/: error_code.rs  mod.rs
src/handlers/: s3.rs
src/models/: s3.rs
src/routes/: mod.rs  s3.rs
src/utils/: base62.rs
