[package]
name = "file-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
validator = { version = "0.20", features = ["derive"] }
thiserror = "2"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = { version = "0.2" }
toolcraft-axum-kit = {version = "0.2.9"}
toolcraft-jwt= {version = "0.3.4"}
toolcraft-request= {version = "0.2.3"}
toolcraft-utils= {version = "0.2.2"}
toolcraft-config= {version = "0.2.0"}
uuid = { version = "1", features = ["v4"] }
